--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,6 +139,12 @@ body grid {
   background-attachment: fixed;
 }
 
+.noise-bg {
+  background-image: radial-gradient(circle, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+  background-size: 2px 2px; /* Adjust size for density of the noise */
+  pointer-events: none; /* Allows clicks to pass through the noise layer to elements beneath */
+}
+
 #LoadingScreen p {
   color: hsl(var(--foreground));
 }
@@ -323,6 +329,22 @@ button.outline {
   border: 1px solid var(--primary-color);
   color: var(--primary-color);
   outline: none;
+}
+button.glass-btn {
+  background: transparent;
+  color: var(--secondary-color);
+  -webkit-backdrop-filter: var(--blur-md);
+          backdrop-filter: var(--blur-md);
+}
+button.glass-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, rgba(72, 167, 197, 0.2), rgba(255, 255, 255, 0.1));
+  z-index: -1;
 }
 
 .star.starred svg {
