--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -141,7 +141,11 @@ body {
   background-size: contain;
   background-attachment: fixed;
 }
-
+.noise-bg {
+  background-image: radial-gradient(circle, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+  background-size: 2px 2px; /* Adjust size for density of the noise */
+  pointer-events: none; /* Allows clicks to pass through the noise layer to elements beneath */
+}
 #LoadingScreen {
   // background-image: url("../../public/images/blat_bottle.jpg");
   // background-repeat: no-repeat;
@@ -352,6 +356,21 @@ button {
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
     outline: none;
+  }
+  &.glass-btn {
+    background: transparent;
+    color: var(--secondary-color);
+    backdrop-filter: var(--blur-md);
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle, #48a7c533, rgba(255, 255, 255, 0.1));
+      z-index: -1;
+    }
   }
 }
 
