--- a/src/components/css/SpotlightCard.css
+++ b/src/components/css/SpotlightCard.css
@@ -27,3 +27,36 @@
 .card-spotlight:focus-within::before {
   opacity: 0.6;
 }
+
+@media screen and (max-width: 768px) {
+  .card-spotlight::before {
+    content: "";
+    background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), var(--spotlight-color), transparent 80%);
+    opacity: 0.6;
+    transition: opacity 0.5s ease;
+    animation: circular-spotlight-move 3s ease-in-out infinite alternate; /* Adjust duration and timing function as desired */
+  }
+}
+
+@keyframes circular-spotlight-move {
+  0% {
+    --mouse-x: 40%;
+    --mouse-y: 40%;
+  }
+  25% {
+    --mouse-x: 60%;
+    --mouse-y: 40%;
+  }
+  50% {
+    --mouse-x: 60%;
+    --mouse-y: 60%;
+  }
+  75% {
+    --mouse-x: 40%;
+    --mouse-y: 60%;
+  }
+  100% {
+    --mouse-x: 40%;
+    --mouse-y: 40%;
+  }
+}
