--- a/src/components/css/SpotlightCard.css
+++ b/src/components/css/SpotlightCard.css
@@ -1,62 +1,77 @@
 .card-spotlight {
-  position: relative;
-  border-radius: 1.5rem;
-  border: 1px solid #e5e7eb;
-  background-color: #f3f4f6;
-  padding: 2rem;
-  overflow: hidden;
-  --mouse-x: 50%;
-  --mouse-y: 50%;
-  --spotlight-color: rgba(255, 255, 255, 0.05);
+	position: relative;
+	border-radius: 1.5rem;
+	border: 1px solid #e5e7eb;
+	background-color: #f3f4f6;
+	padding: 2rem;
+	overflow: hidden;
+	--mouse-x: 50%;
+	--mouse-y: 50%;
+	--spotlight-color: rgba(255, 255, 255, 0.05);
+}
+footer .card-spotlight {
+	border-radius: unset;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border: 1px solid white;
+	padding: none;
 }
 
 .card-spotlight::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), var(--spotlight-color), transparent 80%);
-  opacity: 0;
-  transition: opacity 0.5s ease;
-  pointer-events: none;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: radial-gradient(
+		circle at var(--mouse-x) var(--mouse-y),
+		var(--spotlight-color),
+		transparent 80%
+	);
+	opacity: 0;
+	transition: opacity 0.5s ease;
+	pointer-events: none;
 }
 
 .card-spotlight:hover::before,
 .card-spotlight:focus-within::before {
-  opacity: 0.6;
+	opacity: 0.6;
 }
 
 @media screen and (max-width: 768px) {
-  .card-spotlight::before {
-    content: "";
-    background: radial-gradient(circle at var(--mouse-x) var(--mouse-y), var(--spotlight-color), transparent 80%);
-    opacity: 0.6;
-    transition: opacity 0.5s ease;
-    animation: circular-spotlight-move 3s ease-in-out infinite alternate; /* Adjust duration and timing function as desired */
-  }
+	.card-spotlight::before {
+		content: "";
+		background: radial-gradient(
+			circle at var(--mouse-x) var(--mouse-y),
+			var(--spotlight-color),
+			transparent 80%
+		);
+		opacity: 0.6;
+		transition: opacity 0.5s ease;
+		animation: circular-spotlight-move 3s ease-in-out infinite alternate; /* Adjust duration and timing function as desired */
+	}
 }
 
 @keyframes circular-spotlight-move {
-  0% {
-    --mouse-x: 40%;
-    --mouse-y: 40%;
-  }
-  25% {
-    --mouse-x: 60%;
-    --mouse-y: 40%;
-  }
-  50% {
-    --mouse-x: 60%;
-    --mouse-y: 60%;
-  }
-  75% {
-    --mouse-x: 40%;
-    --mouse-y: 60%;
-  }
-  100% {
-    --mouse-x: 40%;
-    --mouse-y: 40%;
-  }
+	0% {
+		--mouse-x: 40%;
+		--mouse-y: 40%;
+	}
+	25% {
+		--mouse-x: 60%;
+		--mouse-y: 40%;
+	}
+	50% {
+		--mouse-x: 60%;
+		--mouse-y: 60%;
+	}
+	75% {
+		--mouse-x: 40%;
+		--mouse-y: 60%;
+	}
+	100% {
+		--mouse-x: 40%;
+		--mouse-y: 40%;
+	}
 }
