--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -408,6 +408,8 @@ button.glass-btn::before {
 }
 
 /* Maps */
-.maplibregl-ctrl-bottom-right {
-  display: none;
+@media screen and (max-width: 768px) {
+  .maplibregl-control-container .maplibregl-ctrl-bottom-right {
+    bottom: 40px;
+  }
 }/*# sourceMappingURL=globals.css.map */
