--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -386,6 +386,12 @@ button {
     stroke: var(--primary-color);
   }
 }
+/* Carousel */
+#Carousel {
+  > .overflow-hidden {
+    width: 100%;
+  }
+}
 
 /* Tabs */
 .frosted-tabs {
